<resources>
    <string name="app_name">UESAN_S9_FIREBASE</string>
    <string name="valtxtemail">Ingrese su correo</string>
    <string name="valtxtpassword">Ingrese su clave</string>
    <string name="valbtnlogin">LOGIN</string>
    <string name="title_activity_principal">PrincipalActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_registro">Registro</string>
    <string name="menu_listado">Listado</string>
    <string name="menu_mascota">Mascota</string>
    <string name="menu_customer">Customer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="valbtnsave">SAVE</string>
    <string name="valtitledatabase">Database</string>
    <string name="valbtnsavedb">Save</string>
    <string name="valfirstname">First name</string>
    <string name="vallastname">Last name</string>
    <string name="valphone">Phone</string>
</resources>